--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,20 +2,22 @@ cmake_minimum_required(VERSION 2.8.3)
 project(camera_base)
 
 find_package(catkin REQUIRED COMPONENTS
-    roscpp
+  roscpp
+  camera_info_manager
+  diagnostic_updater
+  dynamic_reconfigure
+  image_transport
+  sensor_msgs)
+
+catkin_package(
+  INCLUDE_DIRS include
+  CATKIN_DEPENDS
     camera_info_manager
     diagnostic_updater
     dynamic_reconfigure
     image_transport
-    sensor_msgs
-    )
-
-catkin_package(
-    INCLUDE_DIRS include
-    LIBRARIES
-    CATKIN_DEPENDS camera_info_manager diagnostic_updater dynamic_reconfigure image_transport roscpp sensor_msgs
-    DEPENDS
-    )
+    roscpp
+    sensor_msgs)
 
 install(DIRECTORY include/${PROJECT_NAME}/
   DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION}
